# Notes

./: README.md
homework/: README.md
homework/overview/: overview.md
homework/overview/202507/: 250712.md
homework/resources/docs/: day-demo.md
project-template/cmake-project--template/: CMakeLists.txt  main.cpp
project-template/cmake-project--template/src/module1/: CMakeLists.txt  test1.cpp
project-template/cmake-project--template/src/module2/: CMakeLists.txt  test2.cpp
project-template/qtproject/: CMakeLists.txt  CMakeUserPresets.json  main.cpp
project-template/qtproject/tests/: CMakeLists.txt  test_main.cpp
script/: docker-install.py  git-init.sh
shell/: case.sh  demo.sh  var.sh  while.sh
ubuntu/shell/: base.md  for.sh  function.sh  if.sh  io.sh  readme.md  shell.md
